# gmail-clean-and-backup

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: __init__.py  __main__.py
src/auth/: __init__.py  oauth.py  token_storage.py
src/cli/: __init__.py  commands.py  config.py  output.py
src/imap/: __init__.py  client.py  scanner.py  search.py
src/models/: __init__.py  email.py
src/processor/: __init__.py  backup.py  batch.py  extractor.py  mime_handler.py  reconstructor.py  replacer.py  reverter.py  transaction.py  validator.py
src/utils/: __init__.py  hashing.py  logging.py  manifest.py
tests/: __init__.py  conftest.py  test_backup.py  test_manifest.py  test_models.py
